Changed button name so I don't get as confused during testing.

--- a/McAttributes/Pages/Index.cshtml
+++ b/McAttributes/Pages/Index.cshtml
@@ -34,7 +34,7 @@
                     <option>PUT</option>
                 </select>
 
-                <button onclick="PostIt()">Do The Thing</button>
+                <button onclick="PostIt()">Typed Gossip</button>
                 <button onclick="PostItKV('John Doe')">Key-Value John Doe</button>
                 <button onclick="PostItKV('Jane Doe')">Key-Value Jane Doe</button>
                 <button onclick="PostItKVNull()">Key-Value NULL</button>
